[gd_scene load_steps=8 format=3 uid="uid://bxjfps33caurm"]

[ext_resource type="Texture2D" uid="uid://bjff7lc2xct12" path="res://addons/anima/visual-editor/icons/Animation.svg" id="1"]
[ext_resource type="Script" path="res://addons/anima/visual-editor/editor/AnimaAddFrame.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://b7w4to1hwn6y0" path="res://addons/anima/visual-editor/icons/Delay.svg" id="3"]
[ext_resource type="Texture2D" uid="uid://nl60p0p87533" path="res://addons/anima/visual-editor/icons/Event.svg" id="4"]
[ext_resource type="PackedScene" uid="uid://b0n4ipyle1o1l" path="res://addons/anima/visual-editor/shared/AnimaButton.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://4ekgttxdsjrg" path="res://addons/anima/visual-editor/icons/Add.svg" id="6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yu4hr"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 5

[node name="CenterContainer" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2")

[node name="ButtonsContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 240.0
offset_bottom = 136.0

[node name="Animation" parent="ButtonsContainer" instance=ExtResource("5")]
modulate = Color(1, 1, 1, 0)
offset_right = 240.0
offset_bottom = 56.0
pivot_offset = Vector2(120, 24.5)
text = "Animation"
icon = ExtResource("1")

[node name="Delay" parent="ButtonsContainer" instance=ExtResource("5")]
modulate = Color(1, 1, 1, 0)
offset_right = 240.0
offset_bottom = 56.0
pivot_offset = Vector2(120, 24)
text = "Delay"
icon = ExtResource("3")
style = 1

[node name="Event" parent="ButtonsContainer" instance=ExtResource("5")]
visible = false
modulate = Color(1, 1, 1, 0)
offset_top = 160.0
offset_right = 240.0
offset_bottom = 216.0
pivot_offset = Vector2(120, 24)
text = "Event"
icon = ExtResource("4")

[node name="AddButton" parent="." instance=ExtResource("5")]
offset_left = 141.0
offset_top = 58.0
offset_right = 189.0
offset_bottom = 107.0
theme_override_styles/normal = SubResource("StyleBoxFlat_yu4hr")
icon = ExtResource("6")
icon_alignment = 1
style = 4

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ButtonsContainer/Animation" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ButtonsContainer/Animation" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="ButtonsContainer/Animation" to="." method="_on_Animation_pressed"]
[connection signal="mouse_entered" from="ButtonsContainer/Delay" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ButtonsContainer/Delay" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="ButtonsContainer/Delay" to="." method="_on_Delay_pressed"]
[connection signal="pressed" from="ButtonsContainer/Event" to="." method="_on_Event_pressed"]
[connection signal="mouse_entered" from="AddButton" to="." method="_on_AddButton_mouse_entered"]
[connection signal="mouse_exited" from="AddButton" to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
